Added responsive navigation bar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Product Landing Page</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/style.css" rel="stylesheet">
+        <title>Gym Landing Page</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="/style.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
-    
+        <header id="header">
+            <div class="icon-and-title">
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="80px"
+                    viewBox="0 -960 960 960"
+                    width="80px"
+                    fill="#e8eaed"
+                    id="icon"
+                >
+                    <path
+                        d="M547.37-80.89 501.3-127.2l142-142-374.1-374.1-142 142-46.31-46.07 56-57.52-56-56 85.48-85.48-42-41.52 47.74-47.74 42.52 41 84.48-84.48 56 56 57.52-56 46.3 46.07-142 142 374.11 374.11 142-142 46.07 46.3-56 57.52 56 56-86.48 86.48 42 41.52-47.74 47.74-41.52-42-84.48 84.48-56-56-57.52 56Z"
+                    />
+                </svg>
+                <h1>COOL GYM</h1>
+            </div>
+            <nav id="nav-bar">
+                <a href="#benefits" id="benefit-link">Benefits</a>
+                <a href="#testimonials" id="testimonials-link">Testimonials</a>
+                <a href="#pricing" id="pricing-link">Pricing and Plans</a>
+            </nav>
+        </header>
+        <hr />
     </body>
 </html>
