Added hero section and video

--- a/index.html
+++ b/index.html
@@ -30,11 +30,39 @@
                 <h1>COOL GYM</h1>
             </div>
             <nav id="nav-bar">
-                <a href="#benefits" id="benefit-link">Benefits</a>
-                <a href="#testimonials" id="testimonials-link">Testimonials</a>
-                <a href="#pricing" id="pricing-link">Pricing and Plans</a>
+                <a href="#benefits" id="benefit-link" class="nav-link"
+                    >Benefits</a
+                >
+                <a href="#testimonials" id="testimonials-link" class="nav-link"
+                    >Testimonials</a
+                >
+                <a href="#pricing" id="pricing-link" class="nav-link"
+                    >Pricing and Plans</a
+                >
             </nav>
         </header>
         <hr />
+        <section class="hero-section">
+            <h1 id="hero-header">A GYM THAT CATERS TO YOUR NEEDS</h1>
+            <div id="img-container">
+                <img
+                    id="hero-img"
+                    src="https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                />
+            </div>
+        </section>
+        <section class="video-section">
+            <iframe
+                width="560"
+                height="315"
+                id="video"
+                src="https://www.youtube.com/embed/eiXX7-FSRLc?si=wjLxL6wqh5cFdk84"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+            ></iframe>
+        </section>
     </body>
 </html>
