Add smooth infinite scrolling
God damn that took so long to implement. Hopefully there's no bugs because I'm not doing touching that ever again.

--- a/index.html
+++ b/index.html
@@ -13,56 +13,88 @@
         />
     </head>
     <body>
-        <header id="header">
-            <div class="icon-and-title">
-                <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="80px"
-                    viewBox="0 -960 960 960"
-                    width="80px"
-                    fill="#e8eaed"
-                    id="icon"
-                >
-                    <path
-                        d="M547.37-80.89 501.3-127.2l142-142-374.1-374.1-142 142-46.31-46.07 56-57.52-56-56 85.48-85.48-42-41.52 47.74-47.74 42.52 41 84.48-84.48 56 56 57.52-56 46.3 46.07-142 142 374.11 374.11 142-142 46.07 46.3-56 57.52 56 56-86.48 86.48 42 41.52-47.74 47.74-41.52-42-84.48 84.48-56-56-57.52 56Z"
-                    />
-                </svg>
-                <h1>COOL GYM</h1>
-            </div>
-            <nav id="nav-bar">
-                <a href="#benefits" id="benefit-link" class="nav-link"
-                    >Benefits</a
-                >
-                <a href="#testimonials" id="testimonials-link" class="nav-link"
-                    >Testimonials</a
-                >
-                <a href="#pricing" id="pricing-link" class="nav-link"
-                    >Pricing and Plans</a
-                >
-            </nav>
-        </header>
+        <section class="nav-bar-section">
+            <header id="header">
+                <div class="icon-and-title">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        height="80px"
+                        viewBox="0 -960 960 960"
+                        width="80px"
+                        fill="#e8eaed"
+                        id="icon"
+                    >
+                        <path
+                            d="M547.37-80.89 501.3-127.2l142-142-374.1-374.1-142 142-46.31-46.07 56-57.52-56-56 85.48-85.48-42-41.52 47.74-47.74 42.52 41 84.48-84.48 56 56 57.52-56 46.3 46.07-142 142 374.11 374.11 142-142 46.07 46.3-56 57.52 56 56-86.48 86.48 42 41.52-47.74 47.74-41.52-42-84.48 84.48-56-56-57.52 56Z"
+                        />
+                    </svg>
+                    <h1>COOL GYM</h1>
+                </div>
+                <nav id="nav-bar">
+                    <a href="#benefits" id="benefit-link" class="nav-link"
+                        >Benefits</a
+                    >
+                    <a
+                        href="#testimonials"
+                        id="testimonials-link"
+                        class="nav-link"
+                        >Testimonials</a
+                    >
+                    <a href="#pricing" id="pricing-link" class="nav-link"
+                        >Pricing and Plans</a
+                    >
+                </nav>
+            </header>
+        </section>
         <hr />
         <section class="hero-section">
             <h1 id="hero-header">A GYM THAT CATERS TO YOUR NEEDS</h1>
-            <div id="img-container">
-                <img
-                    id="hero-img"
-                    src="https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                />
+            <div class="img-container">
+                <div class="track">
+                    <img
+                        class="hero-img"
+                        src="https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    />
+                    <img
+                        class="hero-img"
+                        src="https://images.unsplash.com/photo-1521805103424-d8f8430e8933?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGd5bXxlbnwwfHwwfHx8MA%3D%3D"
+                    />
+                    <img
+                        class="hero-img"
+                        src="https://images.unsplash.com/photo-1623874514711-0f321325f318?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fGd5bXxlbnwwfHwwfHx8MA%3D%3D"
+                    />
+                    <img
+                        class="hero-img"
+                        src="https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    />
+                    <img
+                        class="hero-img"
+                        src="https://images.unsplash.com/photo-1521805103424-d8f8430e8933?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGd5bXxlbnwwfHwwfHx8MA%3D%3D"
+                    />
+                    <img
+                        class="hero-img"
+                        src="https://images.unsplash.com/photo-1623874514711-0f321325f318?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fGd5bXxlbnwwfHwwfHx8MA%3D%3D"
+                    />
+                </div>
             </div>
         </section>
         <section class="video-section">
-            <iframe
-                width="560"
-                height="315"
-                id="video"
-                src="https://www.youtube.com/embed/eiXX7-FSRLc?si=wjLxL6wqh5cFdk84"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen
-            ></iframe>
+            <!--! SAM SULEK!!!!! -->
+            <h2>From a satisfied customer, Sam Sulek:</h2>
+            <div class="video-container" id="testimonials">
+                <iframe
+                    id="video"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/eiXX7-FSRLc?si=wjLxL6wqh5cFdk84"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                ></iframe>
+            </div>
         </section>
+        <script></script>
     </body>
 </html>
