Add 2nd video and changed nav-link styling

--- a/index.html
+++ b/index.html
@@ -80,13 +80,28 @@
         </section>
         <section class="video-section">
             <!--! SAM SULEK!!!!! -->
-            <h2>From a satisfied customer, Sam Sulek:</h2>
+            <h1>And now, a word from our valued customers</h1>
             <div class="video-container" id="testimonials">
+                <h3>Sam Sulek:</h3>
                 <iframe
+                    class="video"
                     id="video"
                     width="560"
                     height="315"
                     src="https://www.youtube.com/embed/eiXX7-FSRLc?si=wjLxL6wqh5cFdk84"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                ></iframe>
+                <h3>Larry Wheels:</h3>
+                <iframe
+                    class="video"
+                    id="video2"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/gio-O-3ZvcE?si=6pwM0OdVSPzl9AP_"
                     title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
